@@ -1,4 +1,5 @@
 #!/usr/bin/env python
+# -*- coding: utf-8 -*-
 
 # Author: Felix Wiemann
 # Contact: Felix_Wiemann@ososo.de
@@ -19,17 +20,16 @@ import docutils.core
 
 class DocutilsXMLTestCase(DocutilsTestSupport.StandardTestCase):
 
-    input = 'Test\n====\n\nSubsection\n----------\n\nTest\n\n----------\n\nTest.'
+    input = 'Test\n====\n\nSubsection\n----------\n\nTest\n\n----------\n\nTest. äöü€'
     xmldecl = '<?xml version="1.0" encoding="iso-8859-1"?>\n'
     doctypedecl = '<!DOCTYPE document PUBLIC "+//IDN docutils.sourceforge.net//DTD Docutils Generic//EN//XML" "http://docutils.sourceforge.net/docs/ref/docutils.dtd">\n'
     generatedby = '<!-- Generated by Docutils %s -->\n' % docutils.__version__
-    bodynormal = '<document ids="test" names="test" source="&lt;string&gt;"><title>Test</title><subtitle ids="subsection" names="subsection">Subsection</subtitle><paragraph>Test</paragraph><transition/><paragraph>Test.</paragraph></document>'
-    bodynormal = '<document ids="test" names="test" source="&lt;string&gt;"><title>Test</title><subtitle ids="subsection" names="subsection">Subsection</subtitle><paragraph>Test</paragraph><transition/><paragraph>Test.</paragraph></document>'
-    bodynewlines = '<document ids="test" names="test" source="&lt;string&gt;">\n<title>\nTest\n</title>\n<subtitle ids="subsection" names="subsection">\nSubsection\n</subtitle>\n<paragraph>\nTest\n</paragraph>\n<transition/>\n<paragraph>\nTest.\n</paragraph>\n</document>\n'
-    bodyindents = '<document ids="test" names="test" source="&lt;string&gt;">\n    <title>\n        Test\n    </title>\n    <subtitle ids="subsection" names="subsection">\n        Subsection\n    </subtitle>\n    <paragraph>\n        Test\n    </paragraph>\n    <transition/>\n    <paragraph>\n        Test.\n    </paragraph>\n</document>\n'
+    bodynormal = '<document ids="test" names="test" source="&lt;string&gt;"><title>Test</title><subtitle ids="subsection" names="subsection">Subsection</subtitle><paragraph>Test</paragraph><transition/><paragraph>Test. \xe4\xf6\xfc&#8364;</paragraph></document>'
+    bodynewlines = '<document ids="test" names="test" source="&lt;string&gt;">\n<title>\nTest\n</title>\n<subtitle ids="subsection" names="subsection">\nSubsection\n</subtitle>\n<paragraph>\nTest\n</paragraph>\n<transition/>\n<paragraph>\nTest. \xe4\xf6\xfc&#8364;\n</paragraph>\n</document>\n'
+    bodyindents = '<document ids="test" names="test" source="&lt;string&gt;">\n    <title>\n        Test\n    </title>\n    <subtitle ids="subsection" names="subsection">\n        Subsection\n    </subtitle>\n    <paragraph>\n        Test\n    </paragraph>\n    <transition/>\n    <paragraph>\n        Test. \xe4\xf6\xfc&#8364;\n    </paragraph>\n</document>\n'
 
     def test_publish(self):
-        settings = {'output_encoding': 'iso-8859-1'}
+        settings = {'input_encoding': 'utf8', 'output_encoding': 'iso-8859-1'}
         for settings['newlines'] in 0, 1:
             for settings['indents'] in 0, 1:
                 for settings['xml_declaration'] in 0, 1:
