@@ -47,6 +47,13 @@ Changes Since 0.3.9
 * docutils/writers/html4css1.py:
 
   - Added support for image width and height units.
+  - Made ``xmlcharrefreplace`` the default output encoding error
+    handler.
+
+* docutils/writers/docutils_xml.py:
+
+  - Made ``xmlcharrefreplace`` the default output encoding error
+    handler.
 
 * docs/user/links.txt: Added to project; link list.
 
